# portfolio-rag-app

./: .gitignore  .vercelignore  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: vercel.yml
api/: index.py
data/: 2025-06-30_Clients.csv  2025-06-30_Collateral.csv  2025-06-30_Loans.csv  RatingScale.csv
src/api/: index.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/ui/: chat_segment.tsx  codepopup.tsx
src/types/: react-syntax-highlighter.d.ts
