[project]
name = "portfolio-chat"
version = "0.1.0"
description = "Backend for portfolio-chat interface."
authors = [
    { name = "Samyuktha Ramesh" },
    { name = "Alexander Brady" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "portfolio-rag",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # basics: style, flakes, isort, pyupgrade, bugbear
ignore = ["E501"]                    # let the formatter handle wrapping

[tool.uv.sources]
portfolio-rag = { git = "https://github.com/samyuktha-ramesh/pwc-portfolio-rag.git", rev = "main" }
