[project]
name = "portfolio-chat-app"
version = "0.1.0"
description = "Web interface for portfolio-chat."
authors = [
    { name = "Samyuktha Ramesh" },
    { name = "Alexander Brady" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "portfolio-chat",
    "waitress>=3.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # basics: style, flakes, isort, pyupgrade, bugbear
ignore = ["E501"]                    # let the formatter handle wrapping

[tool.uv.sources]
portfolio-chat = { git = "https://github.com/samyuktha-ramesh/portfolio-chat.git", rev = "main" }
